--- a/crud_assignment/crud.html
+++ b/crud_assignment/crud.html
@@ -11,10 +11,19 @@
 
 <h2>CRUD</h2>
 
-<form id="userForm">
-  <input type="text" id="name" placeholder="Name" required>
+<form id="userForm" novalidate>
+  <div> 
+    <input type="text" id="name" placeholder="Name" required>
+    <span id ="nameError" class="error"></span>
+  </div>
+ <div>
   <input type="email" id="email" placeholder="Email" required>
+  <span id="emailError" class="error"></span>
+  </div>
+  <div>
   <input type="text" id="phone" placeholder="Phone" required>
+  <span id="phoneError" class="error"></span>
+  </div>
   <button type="submit" id ="saveBtn">Add User</button>
  
 </form>
