--- a/crud_assignment/crud.html
+++ b/crud_assignment/crud.html
@@ -41,6 +41,15 @@
 </table>
 
 
+<div id="deleteModal" class="modal">
+  <div class="modal-content">
+    <p>Are you sure you want to delete this user?</p>
+    <button id="confirmDelete">Yes</button>
+    <button id="cancelDelete">No</button>
+  </div>
+</div>
+
+
 <script src="crud.js"></script>
 
 </body>
