--- a/Slider_assignment/slider.html
+++ b/Slider_assignment/slider.html
@@ -11,22 +11,19 @@
 <div class="slideshow-container">
 
   
-  <div class="mySlides slide">
+  <div class="mySlides ">
     <div class="numbertext">1 / 3</div>
-    <img src="img1.jpg" style="width:100%">
-    <div class="text">Caption Text</div>
+    <img src="img5.jpg" style="width:100%">
   </div>
 
-  <div class="mySlides slide">
+  <div class="mySlides ">
     <div class="numbertext">2 / 3</div>
-    <img src="img2.jpg" style="width:100%">
-    <div class="text">Caption Two</div>
+    <img src="img6.jpg" style="width:100%">
   </div>
 
-  <div class="mySlides slide">
+  <div class="mySlides ">
     <div class="numbertext">3 / 3</div>
-    <img src="img3.jpg" style="width:100%">
-    <div class="text">Caption Three</div>
+    <img src="img7.jpg" style="width:100%">
   </div>
 
  
